[package]
name = "buldak"
version = "0.28.0"
authors = ["myyrakle <sssang97@naver.com>"]
edition = "2018"
description = "It is a library that provides various sorting functions." 
keywords = ["sort", "algorithm"] 
license = "MIT" 
include = ["src/lib.rs", "src/lib/*", "Cargo.toml"] 
# exclude = ["src/main.rs"] 
readme = "README.md" 
repository = "https://github.com/myyrakle/buldak" 
documentation = "https://docs.rs/buldak" 
homepage = "https://docs.rs/buldak" 

[dependencies]
rand = "0.7.3"
